Fix: Updated some of the spacing on the leaderboard
commit body

BREAKING CHANGE: `NewMultiClientConfig` removed, and `NewSingleClientFromConfig` removed

--- a/internal/webapp/assets/static/css/main.css
+++ b/internal/webapp/assets/static/css/main.css
@@ -348,3 +348,7 @@ a {
 #bottle_details_button {
   margin: 5px 0px 5px 0px !important;
 }
+
+.p-6 {
+  padding: 1.5rem;
+}
